# mask_RCNN

./: mscoco_example.ipynb  pyproject.toml
notebook/: plot_visualization_utils.ipynb  sample.ipynb
notebook/.ipynb_checkpoints/: sample-checkpoint.ipynb
src/: main.py  metrics_sample.py  my_utils.py  run.py
src/references/: coco_utils.py
