[tool.poetry]
name = "mask-rcnn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
torchvision = "^0.17.1"
numpy = "^1.26.4"
pillow = "^10.2.0"
matplotlib = "^3.8.3"
tensorboard = "^2.16.2"
pycocotools = "^2.0.7"
jupyter = "^1.0.0"
torchmetrics = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
